// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/navbar should have a default behaviour 1`] = `
<div
  className={
    Object {
      "data-css-j54ku0": "",
    }
  }
  style={Object {}}
>
  <div
    className={
      Object {
        "data-css-qdfag2": "",
      }
    }
  >
    react-workbench
  </div>
</div>
`;

exports[`component/navbar should take custom className 1`] = `
<div
  className={
    Object {
      "data-css-euqau2": "",
    }
  }
  style={Object {}}
>
  <div
    className={
      Object {
        "data-css-qdfag2": "",
      }
    }
  >
    react-workbench
  </div>
</div>
`;

exports[`component/navbar should take custom style 1`] = `
<div
  className={
    Object {
      "data-css-j54ku0": "",
    }
  }
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  <div
    className={
      Object {
        "data-css-qdfag2": "",
      }
    }
  >
    react-workbench
  </div>
</div>
`;
